--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,41 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 title: Life Tabernacle
-email: lifetaboffice@gmail.com
-description: Life Tabernacle Apostolic Church of Porterville
-baseurl: '/' # the subpath of your site, e.g. /blog/
-url: 'http://www.lifetabporterville.org' # the base hostname & protocol for your site
-google_verification: ''
-google_plus_com: 'https://plus.google.com/101881077338747748663'  # Community link
-google_plus_per: '+lifetabporterville'  #Personal link
-google_plus_image: '/img/logo.png' # Profile picture
-google_plus_bg: '/img/banner.jpg' # Banner
-
-# Layout settings
-header_type: default  # values [ drawer, default ]
-post_type: highlight    # values [ highlight, default ]
-pagination_type: default  # values [ ops, default ]
-
-disqus: true
-disqus_shortname: 'lifetabporterville'
-
-# SEO
-plugins:
-  - jekyll-sitemap
+email: lifetabporterville@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  We here at Life Tabernacle simply just want to follow the truth. If
+  it's not in the Word of God, then it's not the truth.
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://lifetabporterville.org" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
+  - jekyll-admin
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
