--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
-# ----
-# Site
-
-title: Justice Template
-url: "https://orchid-heron.cloudvent.net"
-baseurl:
+title: Life Tabernacle
+url: 'http://lifetabporterville.org'
+baseurl: '/'
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
@@ -16,33 +13,33 @@ author:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Justice Template
+  name: gio1135
   links:
-    - https://github.com/CloudCannon/justice-jekyll-template
+    - https://github.com/gio1135/
 
 # -----
 # Build
 
-timezone: Etc/UTC
+timezone: America/Los_Angeles
 
 paginate: 10
-paginate_path: "/advice/:num/"
+paginate_path: '/advice/:num/'
 
 collections:
-  - "staff_members"
+  - 'staff_members'
 
 defaults:
   -
     scope:
-      path: ""
+      path: ''
     values:
       layout: page
       background_image_path: /uploads/building.jpg
       image: /uploads/building.jpg
   -
     scope:
-      path: ""
-      type: "posts"
+      path: ''
+      type: 'posts'
     values:
       layout: post
       _options:
@@ -53,8 +50,8 @@ defaults:
         image: Shown in social shares and the advice list.
   -
     scope:
-      path: ""
-      type: "staff_members"
+      path: ''
+      type: 'staff_members'
     values:
       _options:
         image:
