--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,6 +1,6 @@
-title: Justice
+title: Life Tabernacle
 description: Working with people for over 50 years. Justice Law strives to excel for all clients in every situation.
-contact_email_address: contact@example.com
-contact_phone_number: (03) 123 4567
-address: 123 Example Street, Gooseburb, 9876, Ducktown, New Zealand
-postal_address: PO Box 123, Ducktown, New Zealand
+contact_email_address: lifetabporterville@gmail.com
+contact_phone_number: (559) 781-8068
+address: 939 N Main St. Porterville, CA 93257
+postal_address: PO Box 238, Porterville, CA
