--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Life Tabernacle
 url: 'http://lifetabporterville.org'
-baseurl: '/new/'
+baseurl: '/new'
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
