Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Life Tabernacle
-url: 'http://lifetabporterville.org'
+url: 'https://lifetabporterville.org'
 baseurl: '/new'
 google_analytics_key:
 google_maps_javascript_api_key:
