Updated '_data/company.yml' via CloudCannon

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,5 +1,5 @@
 title: Life Tabernacle
-description: Working with people for over 50 years. Justice Law strives to excel for all clients in every situation.
+description: We here at Life Tabernacle simply just want to follow the truth. If it's not in the Word of God, then it's not the truth.
 contact_email_address: lifetabporterville@gmail.com
 contact_phone_number: (559) 781-8068
 address: 939 N Main St. Porterville, CA 93257
