--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -8,5 +8,5 @@
       link: /services/
     - name: Contact
       link: /contact/
-    - name: Advice
-      link: /advice/
+    - name: Past events
+      link: /past-events/
