--- a/_config.yml
+++ b/_config.yml
@@ -1,75 +1,38 @@
-title: Life Tabernacle
-url: 'https://lifetabporterville.org'
-baseurl: '/new'
+# ----
+# Site
+
+title: Frisco Template
+url: "https://brave-submarine.cloudvent.net"
+baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: We here at Life Tabernacle simply just want to follow the truth. If it's not in the Word of God, then it's not the truth.
+description: App marketing template for Jekyll.
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: gio1135
+  name: Frisco Template
   links:
-    - https://github.com/gio1135/
+    - https://github.com/CloudCannon/frisco-jekyll-template
 
 # -----
 # Build
 
-timezone: America/Los_Angeles
-
-paginate: 10
-paginate_path: '/advice/:num/'
-
-collections:
-  - 'staff_members'
-
-defaults:
-  -
-    scope:
-      path: ''
-    values:
-      layout: page
-      background_image_path: /uploads/building.jpg
-      image: /uploads/building.jpg
-  -
-    scope:
-      path: ''
-      type: 'posts'
-    values:
-      layout: post
-      _options:
-        content:
-          width: 960
-          height: 2000
-      _comments:
-        image: Shown in social shares and the advice list.
-  -
-    scope:
-      path: ''
-      type: 'staff_members'
-    values:
-      _options:
-        image:
-          width: 440
-          height: 440
+timezone: Etc/UTC
 
 permalink: pretty
 
-jekyll-archives:
-  enabled:
-    - categories
-
 plugins:
-  - jekyll-archives
   - jekyll-sitemap
   - jekyll-seo-tag
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-archives
 
 exclude:
   - Gemfile
@@ -77,13 +40,56 @@ exclude:
   - README.md
   - LICENCE
 
+collections:
+  staff_members:
+    _hide_content: true
+
+paginate: 10
+paginate_path: "/blog/:num/"
+
+jekyll-archives:
+  enabled: ['categories']
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
+  -
+    scope:
+      type: "posts"
+    values:
+      layout: "post"
+      _options:
+        image:
+          width: 2000
+          height: 1322
+          resize_style: cover
+        content:
+          width: 1500
+          height: 2000
+  -
+    scope:
+      path: "contact-success.html"
+    values:
+      layout: "page"
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      image:
+        width: 2000
+        height: 1322
+        resize_style: cover
+      bottom_image:
+        width: 2000
+        height: 1322
+        resize_style: cover
+
 # -----------
 # CloudCannon
-
-call_to_actions:
-  - Contact
-  - Advice
-  - Map
 
 social_icons:
   - Facebook
@@ -94,20 +100,9 @@ social_icons:
   - Tumblr
   - Twitter
   - YouTube
+  - Email
   - RSS
 
 _comments:
-  large_header: Toggles the size of the top banner.
-  show_in_navigation: Toggles a link in the top banner.
-  author_staff_member: The staff member writing this post.
-  call_to_action: Type of request shown at the bottom of this page.
-  background_image_path: Image shown in the top banner, blank for the default.
-  testimonials: Update, add or remove testimonials.
-  map: Update the map location and display settings.
-  latitude: Coordinates for the center marker on the map.
-  longitude: Coordinates for the center marker on the map.
-  zoom: The zoom level for the map.
-  phone_extension: The digits after dialing the company phone.
-  credentials: Shown as subtext on staff member summaries.
-  contact_email_address: Address for the contact form to send to.
-  new_window: Whether the link opens a new browser tab/window.
+  description: Text shown when sharing on social media
+  blurb: Short bio or description of this person
