--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: App marketing template for Jekyll.
+description: We here at Life Tabernacle simply just want to follow the truth. If it's not in the Word of God, then it's not the truth.
 author:
   name:
   email:
