Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Life Tabernacle
 url: 'https://lifetabporterville.org/new'
-baseurl: '/'
+baseurl: '/new/'
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
